# Python-Projects-ice-cream-shop-part1.py

Python-Projects-ice-cream-shop-part1/: .gitignore  README.md  pyproject.toml
Python-Projects-ice-cream-shop-part1/app/: main.py  tables.py
Python-Projects-ice-cream-shop-part1/app/handlers/: commands.py
Python-Projects-ice-cream-shop-part1/settings/: config.py
Python-Projects-ice-cream-shop-part1/settings/.envs/: .env.template
